--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -47,7 +47,7 @@
     font-size: 1.125rem;
 }
 
-.btn[area-label] {
+.btn[aria-label] {
 
     position: relative;
 
@@ -55,11 +55,11 @@
         content: "";
         position: absolute;
         border-radius: inherit;
-        inset: 1.5px;
+        inset: 1px;
         background-color: var(--bg-color);
     }
     &::after {
-        content: attr(area-label);
+        content: attr(aria-label);
         background: var(--btn-bg-color);
         -webkit-background-clip: text;
         background-clip: text;
